spec/errors/unterminated_string.lang
#
# Unterminated strings
#

" This is a long string
  with many \"breaks\"
    but it 'never'
      'actually
        ends'
